# sixfiveotwo

./: .gitignore  CMakeLists.txt  COPYING  bogus.c  def_handler.c  defs.h  entry.c  jsr.c  lda.c  memop.c  nop.c  tab.c
.cache/clangd/index/: 00.c.FFF2E3B2F759B51D.idx  bogus.c.39762043B0DA00EB.idx  defs.h.C1E364DFEAD7AE07.idx  defs.h.C1E364DFEAD7AE07.idx.tmp.1dc1eab9  defs.h.C1E364DFEAD7AE07.idx.tmp.6869787c  defs.h.C1E364DFEAD7AE07.idx.tmp.a15d8023  entry.c.37F39FA94BDB6CFE.idx  lda.c.372314ECD5CF34EC.idx  lsop.c.A4404A981438D58B.idx  mb.c.5EDDC4366D65FC0E.idx  mb.h.64A8E3BDDBD0B75C.idx  memop.c.041A4BA2BC6EF18A.idx  ps.h.BCFF554CA91A3343.idx  tab.c.1E252CF9A080C881.idx
